src/yini_test/cases/golden/lenient/valid/inline-objects/deeply-nested-inline-object.yini
@yini

^ Objects
entry = { a: { b: { c: 1 } } }

