src/yini_test/cases/golden/lenient/invalid/inline-objects/inline-object-opening-on-next-line.yini
@yini

^ Objects
entry =
{ a: 1 }

